preventing images from being cut off on the homepage

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -755,6 +755,10 @@
   main {
     overflow: visible;
 
+    .container {
+      position: relative;
+    }
+
     section {
       overflow: hidden;
     }
@@ -963,9 +967,14 @@
   }
 
   #oss {
-    padding-top: 176px;
-    padding-bottom: 400px;
+    padding-top: 0;
+    padding-bottom: 0;
     margin-top: 100px;
+
+    .container {
+      padding-top: 176px;
+      padding-bottom: 400px;
+    }
 
     .frameworks {
       margin-bottom: 33px;
@@ -1052,7 +1061,9 @@
 
 
     @media (max-width: $screen-md-max) {
-      padding-top: 120px;
+      .container {
+        padding-top: 120px;
+      }
 
       .content {
         width: 380px;
@@ -1067,8 +1078,10 @@
     }
 
     @media (max-width: $screen-xs-max) {
-      padding-top: 0px;
-      padding-bottom: 328px;
+      .container {
+        padding-top: 0px;
+        padding-bottom: 328px;
+      }
 
       .content {
         width: 100%;
@@ -1107,8 +1120,13 @@
   }
 
   #devops {
-    padding-top: 204px;
-    padding-bottom: 252px;
+    padding-top: 0;
+    padding-bottom: 0;
+
+    .container {
+      padding-top: 204px;
+      padding-bottom: 252px;
+    }
 
     .content {
       position: relative;
@@ -1144,7 +1162,9 @@
     }
 
     @media (max-width: $screen-md-max) {
-      padding-top: 60px;
+      .container {
+        padding-top: 60px;
+      }
 
       .graphics {
         width: 933px;
@@ -1159,8 +1179,10 @@
     }
 
     @media (max-width: $screen-xs-max) {
-      padding-top: 160px;
-      padding-bottom: 420px;
+      .container {
+        padding-top: 160px;
+        padding-bottom: 420px;
+      }
 
       .content {
         width: 100%;
